<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    android:orientation="vertical">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="centerCrop"
        android:src="@mipmap/signup_background" />

    <View
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/indigo_600_overlay" />

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:fitsSystemWindows="false"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
        app:contentInsetStartWithNavigation="0dp"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light" />

    <ScrollView
        android:id="@+id/scrollContent"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/toolbar"
        android:fillViewport="true"
        android:scrollbarSize="@dimen/spacing_small"
        android:scrollbarThumbVertical="@color/grey_40"
        android:scrollbars="vertical"
        android:visibility="visible">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <android.support.v7.widget.CardView
                android:id="@+id/cardView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                app:cardBackgroundColor="@android:color/white"
                app:cardCornerRadius="20dp"
                app:cardElevation="0dp"
                app:contentPadding="@dimen/spacing_medium">

                <ImageView
                    android:layout_width="@dimen/spacing_xxxxxlarge"
                    android:layout_height="@dimen/spacing_xxxxxlarge"
                    android:src="@mipmap/logo" />

            </android.support.v7.widget.CardView>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/spacing_medium"
                android:orientation="vertical"
                android:padding="@dimen/spacing_mlarge">

                <EditText
                    android:id="@+id/etName"
                    style="@style/EditText.Flat.Grey"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/spacing_xmlarge"
                    android:background="@drawable/edit_text_round_bg_overlay_white"
                    android:hint="@string/signUpNameHint"
                    android:maxLines="1"
                    android:minHeight="@dimen/spacing_xmlarge"
                    android:nextFocusDown="@+id/etUserName"
                    android:paddingLeft="@dimen/spacing_middle"
                    android:paddingRight="@dimen/spacing_middle"
                    android:singleLine="true"
                    android:textColor="@android:color/white"
                    android:textColorHint="@android:color/white" />

                <EditText
                    android:id="@+id/etUserName"
                    style="@style/EditText.Flat.Grey"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/spacing_xmlarge"
                    android:layout_marginTop="@dimen/spacing_mlarge"
                    android:background="@drawable/edit_text_round_bg_overlay_white"
                    android:hint="@string/signUpUserNameHint"
                    android:maxLines="1"
                    android:minHeight="@dimen/spacing_xmlarge"
                    android:nextFocusDown="@+id/etPassword"
                    android:paddingLeft="@dimen/spacing_middle"
                    android:paddingRight="@dimen/spacing_middle"
                    android:singleLine="true"
                    android:textColor="@android:color/white"
                    android:textColorHint="@android:color/white" />

                <EditText
                    android:id="@+id/etPassword"
                    style="@style/EditText.Flat.Grey"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/spacing_xmlarge"
                    android:layout_marginTop="@dimen/spacing_mlarge"
                    android:background="@drawable/edit_text_round_bg_overlay_white"
                    android:hint="@string/signUpPasswordHint"
                    android:inputType="textPassword"
                    android:maxLines="1"
                    android:minHeight="@dimen/spacing_xmlarge"
                    android:nextFocusDown="@+id/etMail"
                    android:paddingLeft="@dimen/spacing_middle"
                    android:paddingRight="@dimen/spacing_middle"
                    android:singleLine="true"
                    android:textColor="@android:color/white"
                    android:textColorHint="@android:color/white" />

                <EditText
                    android:id="@+id/etMail"
                    style="@style/EditText.Flat.Grey"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/spacing_xmlarge"
                    android:layout_marginTop="@dimen/spacing_mlarge"
                    android:background="@drawable/edit_text_round_bg_overlay_white"
                    android:hint="@string/signUpEmailHint"
                    android:maxLines="1"
                    android:minHeight="@dimen/spacing_xmlarge"
                    android:paddingLeft="@dimen/spacing_middle"
                    android:paddingRight="@dimen/spacing_middle"
                    android:singleLine="true"
                    android:textColor="@android:color/white"
                    android:textColorHint="@android:color/white" />


                <Button
                    android:id="@+id/btnSubmit"
                    style="@style/Widget.AppCompat.Button.Borderless"
                    android:layout_width="match_parent"
                    android:layout_height="45dp"
                    android:layout_marginLeft="-4dp"
                    android:layout_marginTop="@dimen/spacing_mlarge"
                    android:layout_marginRight="-4dp"
                    android:background="@drawable/btn_rect_white_overlay"
                    android:text="@string/signUpBtnSubmit"
                    android:textAllCaps="false"
                    android:textAppearance="@style/TextAppearance.AppCompat.Body2"
                    android:textColor="@android:color/white" />

            </LinearLayout>

        </LinearLayout>
    </ScrollView>


</RelativeLayout>